😎 nav spacing bug 🐞 fix 👍

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -81,7 +81,7 @@ button:focus {outline:0;}
 }
 
 /* search item nav at bottom */
-li {
+#all-pagination-links li {
     display: inline;
     
 }
